examples/test/testpolicy12137.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12137
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key15: value0
      key37: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value20
          key46: value36
          key34: value0
      podSelector:
        matchLabels:
          key49: value26
